--- a/.github/workflows/Arthur&Athena&Taiyi-ImmortalWrt.yml
+++ b/.github/workflows/Arthur&Athena&Taiyi-ImmortalWrt.yml
@@ -3,8 +3,8 @@ name: Arthur&Athena&Taiyi-ImmortalWrt
 on:
   workflow_dispatch:
   workflow_call:
-  # schedule:
-  #   - cron: 0 20 * * *
+  schedule:
+    - cron: 0 20 * * *
 
 env:
   REPO_URL: https://github.com/laipeng668/immortalwrt.git
